blocked web page

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -49,3 +49,83 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+/*
+  ==========================================
+            СІТКА ГОЛОВНОЇ СТОРІНКИ
+  ==========================================
+*/
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+/*
+  ------------------------------------------
+  Клас із контейнером, що вирівнює блочні
+  елементи по центру
+  ------------------------------------------
+*/
+.container {
+    margin: 0 auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 960px;
+}
+/*
+  ------------------------------------------
+  Встановлюємо межу padding для усіх чотирьох
+  сторін елемента <section>
+  ------------------------------------------
+*/
+.hero {
+    padding: 22px 80px 66px 80px;
+}
+/*
+  ==========================================
+            ТИПОГРАФІКА
+  ==========================================
+*/
+
+/*
+  ------------------------------------------
+  Вертикальний відступ між елементами h1,
+  h3, h4, h5, p становить 22рх
+  ------------------------------------------
+*/
+h1, h3, h4, h5, p {
+    margin-bottom: 22px;
+}
+
+/*
+  ==========================================
+            КНОПКИ
+  ==========================================
+*/
+
+/*
+  ------------------------------------------
+  Кнопки заокругленої форми, які є оремим
+  блоком, що можна редагувати та не мають
+  зовнішніх меж
+  ------------------------------------------
+*/
+.btn {
+    border-radius: 5px;
+    display: inline-block;
+    margin: 0;
+}
+/*
+  ------------------------------------------
+  Однопіксельна рамка сірого кольору з
+  відступами padding 10 пікселів зверху і знизу,
+  а також padding 30 пікселів праворуч і ліворуч
+  від кнопки.
+  ------------------------------------------
+*/
+.btn-alt {
+    border: 1px solid #dfe2e5;
+    padding: 10px 30px;
+}
