--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -68,11 +68,43 @@ table {
   елементи по центру
   ------------------------------------------
 */
-.container {
+.container,
+.grid {
     margin: 0 auto;
+    width: 960px;
+}
+.container {
     padding-left: 30px;
     padding-right: 30px;
-    width: 960px;
+}
+/*
+  ------------------------------------------
+  Створюємо макет з 3 колонок використовуючи
+  рядково-блочні елементи; ширина однієї 1/3,
+  а інша - 2/3 від ширини сторінки
+  ------------------------------------------
+*/
+.col-1-3,
+.col-2-3 {
+    display: inline-block;
+    vertical-align: top;
+}
+.col-1-3 {
+    width: 33.33%;
+}
+.col-2-3 {
+    width: 66.66%;
+}
+/*
+  ------------------------------------------
+  Задаємо відступи між 3 блоками макету
+  ------------------------------------------
+*/
+.grid,
+.col-1-3,
+.col-2-3 {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 /*
   ------------------------------------------
