added font properties

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -49,7 +49,113 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+/*
+  ==========================================
+            ТИПОГРАФІКА
+  ==========================================
+*/
 
+/*
+  ------------------------------------------
+        додаємо властивості шрифтів і
+    відступи між елементами margin-bottom
+  ------------------------------------------
+*/
+body {
+    color: #888;
+    font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+p {
+    margin-bottom: 22px;
+}
+h1, h2, h3, h4 {
+    color: #648880;
+    margin-bottom: 22px;
+}
+h1 {
+    font-size: 36px;
+    line-height: 44px;
+}
+h2 {
+    font-size: 24px;
+    line-height: 44px;
+}
+h3 {
+    font-size: 21px;
+}
+h4 {
+    font-size: 18px;
+}
+h5 {
+    margin-bottom: 22px;
+    color: #a9b2b9;
+    font-size: 14px;
+    font-weight: 400;
+}
+strong {
+    font-weight: 400;
+}
+cite, em {
+    font-style: italic;
+}
+/*
+  ------------------------------------------
+            Гіперсилки
+  ------------------------------------------
+*/
+a:hover {
+    color: #a9b2b9;
+}
+a {
+    color: #648880;
+}
+/*
+  ------------------------------------------
+  Колір гіперсилок для 3 блочних елементів
+  ------------------------------------------
+*/
+.teaser a:hover h3 {
+    color: #a9b2b9;
+}
+/*
+  ------------------------------------------
+            Логотип
+  ------------------------------------------
+*/
+.logo {
+    border-top: 4px solid #648880;
+    float: left;
+    font-size: 48px;
+    line-height: 44px;
+    padding: 40px 0 22px 0;
+}
+.tagline {
+    margin: 66px 0 22px 0;
+}
+/*
+  ------------------------------------------
+       Навігаційне меню після логотипу
+  ------------------------------------------
+*/
+.primary-nav {
+    font-size: 14px;
+    font-weight: 400;
+}
+/*
+  ------------------------------------------
+       Навігаційне меню у <footer>
+  ------------------------------------------
+*/
+.primary-footer {
+    color: #648880;
+    font-size: 14px;
+    padding-bottom: 44px;
+    padding-top: 44px;
+}
+.primary-footer small {
+    float: left;
+    font-weight: 400;
+}
 /*
   ==========================================
             СІТКА ГОЛОВНОЇ СТОРІНКИ
@@ -113,7 +219,14 @@ table {
   ------------------------------------------
 */
 .hero {
+    line-height: 44px;
     padding: 22px 80px 66px 80px;
+}
+.hero h2 {
+    font-size: 36px;
+}
+.hero p {
+    font-size: 24px;
 }
 /*
   ------------------------------------------
@@ -156,22 +269,6 @@ table {
     padding-bottom: 44px;
     padding-top: 44px;
 }
-/*
-  ==========================================
-            ТИПОГРАФІКА
-  ==========================================
-*/
-
-/*
-  ------------------------------------------
-  Вертикальний відступ між елементами h1,
-  h3, h4, h5, p становить 22рх
-  ------------------------------------------
-*/
-h1, h3, h4, h5, p {
-    margin-bottom: 22px;
-}
-
 /*
   ==========================================
             КНОПКИ
