properties backgrounds and gradients

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -236,6 +236,7 @@ p a {
 .primary-header a:hover,
 .primary-footer a:hover {
     color: #648880;
+}
 /*
   ==========================================
             КНОПКИ
