--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -330,6 +330,20 @@ p a {
     text-align: right;
 }
 /*
+  ------------------------------------------
+       Вирівнюємо навігаційне меню
+       по горизонталі
+  ------------------------------------------
+*/
+.nav li {
+    display: inline-block;
+    margin: 0 10px;
+    vertical-align: top;
+}
+.nav li:last-child {
+    margin-right: 0;
+}
+/*
   ==========================================
                ГОЛОВНА СТОРІНКА
   ==========================================
@@ -360,4 +374,19 @@ p a {
 */
 .teaser a:hover h3 {
     color: #a9b2b9;
+}
+/*
+  ========================================
+              СПІКЕРИ
+  ========================================
+*/
+.speaker-info {
+    border: 1px solid #dfe2e5;
+    border-radius: 5px;
+    margin-top: 88px;
+    padding: 22px 0;
+    text-align: center;
+}
+.speaker {
+    margin-bottom: 44px;
 }
