--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -231,7 +231,7 @@ p a {
 */
 .primary-header a,
 .primary-footer a {
-    color: #fff;
+    color: #a9b2b9;
 }
 .primary-header a:hover,
 .primary-footer a:hover {
@@ -375,6 +375,12 @@ p a {
 .teaser a:hover h3 {
     color: #a9b2b9;
 }
+.teaser img {
+    border-radius: 5px;
+    display: block;
+    margin-bottom: 22px;
+    max-width: 100%
+}
 /*
   ========================================
               СПІКЕРИ
@@ -384,9 +390,15 @@ p a {
     border: 1px solid #dfe2e5;
     border-radius: 5px;
     margin-top: 88px;
-    padding: 22px 0;
+    padding-bottom: 22px;
     text-align: center;
 }
 .speaker {
     margin-bottom: 44px;
+}
+.speaker-info img {
+    border-radius: 50%;
+    height: 130px;
+    margin: -66px 0 22px 0;
+    vertical-align: top;
 }
